k8s/canary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-app
  template:
    metadata:
      labels:
        app: canary-app
    spec:
      containers:
        - name: canary-app
          image: basek8s-canary:yellow
          ports:
            - containerPort: 80
