k8s/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: canary.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: canary-svc
                port:
                  number: 80
